initial expand collapses - new file, also works for app-nav

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -11,7 +11,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
@@ -53,7 +53,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
@@ -80,7 +80,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
@@ -152,7 +152,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
@@ -254,7 +254,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
@@ -341,7 +341,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
@@ -388,7 +388,7 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner">
-            <i class="itemBoxTable__action">ऄ</i>
+            <i class="itemBoxTable__action">अ</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
