--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
 
 <!-- PLUGINS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
 
