--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -1,4 +1,4 @@
-<div class="multiSelector"  id="multiSelector-2">
+<div class="multiSelector multiSelector--popup"  id="multiSelector-2">
 
   <div class="multiSelector__box">
 
@@ -14,9 +14,14 @@
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow multiSelector__box--selectionTitle">
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;">
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner">
+                <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
               <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
-                <i>ऄ Selected</i>
+                <i>Selected</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -49,9 +54,9 @@
           <!-- /.itemBox selection-->
 
           <ul class="itemBoxTable__bodyRow multiSelector__box--optionsTitle">
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;">
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i>ऄ </i>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="0">
