added right panel in new position

--- a/_includes/blocks/document-comments.html
+++ b/_includes/blocks/document-comments.html
@@ -7,9 +7,7 @@
       </div>
     </div>
 
-    <div class="tabs tabs--gold hide-scrollbar">
-
-      <div class="hide-scrollbar-inner">
+    <div class="tabs tabs--gold">
 
       <div class="tabs__nav">
         <ul>
@@ -133,8 +131,6 @@
           </div>
         </div>
       </div>
-
-      </div><!-- /.hide-scrollbar-ff-inner -->
 
     </div><!-- /.tabs -->
 </aside><!-- /.document__comments -->
