--- a/sass/app.scss
+++ b/sass/app.scss
@@ -159,7 +159,6 @@ body.fixed {
 }
 .app.document__comments--visible .panel__right {
     right: 0;
-    box-shadow: 0 -10px 200px rgba(0,0,0,.3);
 }
 
 .app.document__comments--visible .panel__right .document__comments {
@@ -543,12 +542,14 @@ body.fixed {
     position: absolute;
 
     width: 25%;
-
+    
     top: 0;
     right: -25%;
 
     box-shadow: none;
     transition: all .3s ease-in-out;
+
+    padding: 1px 10px 0 10px;
 }
 
 
@@ -748,10 +749,10 @@ body.fixed {
 }
 
 .document__comments {
-    position: fixed;
-    bottom: 1%;
+    position: absolute;
+    bottom: unset;
     right: -25%;
-    width: 25%;
+    width: 100%;
     background-color: #FFF;
     color: #000;
     font-size: 16px;
