--- a/sass/app.scss
+++ b/sass/app.scss
@@ -24,6 +24,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
+body.page-Components {
+  background-color: #FFF;
+  padding: 50px;
+}
+body.page-Itembox {
+  background-color: #FFF;
+  padding: 50px;
+}
 
 input,
 textarea {
@@ -542,7 +550,7 @@ body.fixed {
     position: absolute;
 
     width: 25%;
-    
+
     top: 0;
     right: -25%;
 
