--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -16,7 +16,7 @@
           <ul class="itemBoxTable__bodyRow multiSelector__box--selectionTitle">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -56,7 +56,7 @@
           <ul class="itemBoxTable__bodyRow multiSelector__box--optionsTitle">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--toggle">अ</i>
+                <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
