--- a/_layouts/old-pmx.html
+++ b/_layouts/old-pmx.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx-temp.css">
+
     {% include head.html %}
   </head>
 
