--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-{% include head.html %}
+<head>
+  {% include head.html %}
+</head>
 
 <body>
   <div class="app cf document__info--visible">
