update search box

--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -18,7 +18,7 @@
 
       </div>
       <div class="old-multiselect-tab">
-        <p class="inlinesearch"><input type="text" value="Search..." class="text empty"></p>
+        <p class="inlinesearch"><input type="text" placeholder="Search..." class="text empty"></p>
         <!-- inlinesearch -->
         <ul class="monsterlist" id="itemlist" style="height: 207px;">
           <li id="itemid237696" class=""><label class="selectable"><span class="inner"><div class="checker"><span><input type="checkbox" style="opacity: 0;"></span></div>Unassigned</span></label></li>
