--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
   <body class="page-{{ page.title }}">
+    <div class="overlay"></div>
     {{ content }}
   </body>
 
