--- a/_includes/popups/multiSelector-advanced.html
+++ b/_includes/popups/multiSelector-advanced.html
@@ -2,13 +2,16 @@
 <div class="multiSelector multiSelector--popup multiSelector--visible">
 
   <div class="multiSelector__box">
+
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput" placeholder="filter through columns">
     </div>
+
   </div>
   <!-- /.multiSelector__box -->
 
   <div class="multiSelector__box ">
+
     <div class="itemBox">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
@@ -29,6 +32,7 @@
               </div>
             </li>
           </ul>
+
           <div class="itemBox itemBox--children multiSelector__box--selectionChildren">
             <div class="itemBoxTable">
               <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
@@ -50,7 +54,7 @@
               </div>
             </div>
           </div>
-          <!-- /.itemBox selection-->
+          <!-- /.itemBox -->
 
           <ul class="itemBoxTable__bodyRow multiSelector__box--optionsTitle">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
@@ -60,6 +64,7 @@
             </li>
             <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner">
+
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required pmx-selector---incl-excl">
                   <div class="pmx-selector__value pmx-selector__value--include pmx-selector__value--selected">
                     <div class="pmx-selector__label ">
@@ -72,6 +77,7 @@
                     </div>
                   </div>
                 </div>
+
               </div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -85,6 +91,7 @@
               </div>
             </li>
           </ul>
+
           <div class="itemBox itemBox--children multiSelector__box--optionsChildren">
             <div class="itemBoxTable">
               <div class="itemBoxBody">
@@ -108,10 +115,10 @@
                     </div>
                   </li>
                 </ul>
-                <div class="itemBox itemBox--children itemBoxTable__bodyRow--closed" style="display: none;">
+                <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--closed">
+                      <ul class="itemBoxTable__bodyRow">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Arnaud</div>
                         </li>
@@ -121,7 +128,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--closed">
+                      <ul class="itemBoxTable__bodyRow">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Esteban</div>
                         </li>
@@ -131,7 +138,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--closed">
+                      <ul class="itemBoxTable__bodyRow">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Nóra</div>
                         </li>
@@ -141,7 +148,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--closed">
+                      <ul class="itemBoxTable__bodyRow">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                           <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--text">Paul</div>
                         </li>
@@ -154,11 +161,11 @@
                     </div>
                   </div>
                 </div>
-                <!-- /.itemBox -->
               </div>
             </div>
           </div>
-          <!-- /.itemBox options -->
+          <!-- /.itemBox -->
+
         </div>
       </div>
     </div>
@@ -168,3 +175,4 @@
   <!-- /.multiSelector__box -->
 
 </div>
+<!-- /.multiSelector -->
